Add author info and dependency bump

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rovers"
 version = "0.1.0"
-authors = ["kollch"]
+authors = ["Charles Koll <kollch@oregonstate.edu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
